// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for SegmentProfiles's sendSubscription destination action: all fields 1`] = `
Object {
  "data": Object {
    "batch": Array [
      Object {
        "anonymousId": undefined,
        "context": Object {
          "consent": Object {},
          "externalIds": Array [
            Object {
              "collection": "users",
              "encoding": "none",
              "id": "tester11@seg.com",
              "type": "email",
            },
            Object {
              "collection": "users",
              "encoding": "none",
              "id": "+12135618345",
              "type": "phone",
            },
            Object {
              "collection": "users",
              "encoding": "none",
              "id": "abcd12bbfygdbvbvvvv",
              "type": "android.push_token",
            },
            Object {
              "collection": "users",
              "encoding": "none",
              "id": "abcd12bbfjfsykdbvbvvvvvv",
              "type": "ios.push_token",
            },
          ],
          "messaging_subscriptions": Array [
            Object {
              "groups": Array [
                Object {
                  "name": "marketing",
                  "status": "SUBSCRIBED",
                },
                Object {
                  "name": "ProductUpdates",
                  "status": undefined,
                },
                Object {
                  "name": "newsletter",
                  "status": "UNSUBSCRIBED",
                },
              ],
              "key": "tester11@seg.com",
              "status": "SUBSCRIBED",
              "type": "EMAIL",
            },
            Object {
              "key": "+12135618345",
              "status": "SUBSCRIBED",
              "type": "SMS",
            },
            Object {
              "key": "+12135618345",
              "status": "SUBSCRIBED",
              "type": "WHATSAPP",
            },
            Object {
              "key": "abcd12bbfygdbvbvvvv",
              "status": "UNSUBSCRIBED",
              "type": "ANDROID_PUSH",
            },
            Object {
              "key": "abcd12bbfjfsykdbvbvvvvvv",
              "status": "SUBSCRIBED",
              "type": "IOS_PUSH",
            },
          ],
          "messaging_subscriptions_retl": true,
        },
        "integrations": Object {
          "All": false,
        },
        "messageId": undefined,
        "timestamp": undefined,
        "traits": Object {},
        "type": "identify",
        "userId": "user1234",
      },
    ],
  },
  "output": "Action Executed",
}
`;

exports[`Testing snapshot for SegmentProfiles's sendSubscription destination action: required fields 1`] = `
Object {
  "data": Object {
    "batch": Array [
      Object {
        "anonymousId": undefined,
        "context": Object {
          "consent": Object {},
          "externalIds": Array [
            Object {
              "collection": "users",
              "encoding": "none",
              "id": "tester11@seg.com",
              "type": "email",
            },
            Object {
              "collection": "users",
              "encoding": "none",
              "id": "+12135618345",
              "type": "phone",
            },
          ],
          "messaging_subscriptions": Array [
            Object {
              "key": "tester11@seg.com",
              "status": "SUBSCRIBED",
              "type": "EMAIL",
            },
            Object {
              "key": "+12135618345",
              "status": "SUBSCRIBED",
              "type": "SMS",
            },
          ],
          "messaging_subscriptions_retl": true,
        },
        "integrations": Object {
          "All": false,
        },
        "messageId": undefined,
        "timestamp": undefined,
        "traits": Object {},
        "type": "identify",
        "userId": "user12",
      },
    ],
  },
  "output": "Action Executed",
}
`;
